# serviceweb

./: CMakeLists.txt  README.md  api.cpp  api_download.cpp  api_nvs.cpp  api_priv.hpp  api_upload.cpp  fileserver.c  listdir.cpp  ota.cpp  serviceweb.cpp  sysmon.c  sysmon.cpp  upload.cpp
include/: serviceweb.h
web/: dir.html  ota.html  upload.html
